Remove unnecessary attribute

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="highlight/highlight.css" />
 <link rel="stylesheet" type="text/css" href="styles.css" />
-<script type="module" src="highlight/highlight.js"></script>
+<script src="highlight/highlight.js"></script>
 <title>JavaScript Event Loop Demo</title>
 
 <select>
@@ -43,7 +43,7 @@
 
 <img src="event-loop.png" height="200" alt="" class="eventloop" />
 
-<script type="module">
+<script>
   async function loadSnippet(url) {
     try {
       const response = await fetch(url);
